<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textColor="@color/color_white"
        android:text = "@string/social_conn"
        android:textSize="@dimen/status_message_font_size"
        android:layout_marginLeft="10dp"
        android:gravity="center|left" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/login_with_facebook"
        android:id="@+id/facebook"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/facebook"
        android:textColor="#ff000000"
        android:gravity="center|left"
        android:paddingLeft="80dp"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/login_with_twitter"
        android:id="@+id/twitter"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/tweeter"
        android:textColor="#ff000000"
        android:gravity="center|left"
        android:paddingLeft="80dp"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/login_with_linkedin"
        android:id="@+id/linkedin"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/linked_in"
        android:textColor="#ff000000"
        android:gravity="center|left"
        android:paddingLeft="80dp"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/login_with_gplus"
        android:id="@+id/googleplus"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/google_plus"
        android:textColor="#ff000000"
        android:gravity="center|left"
        android:paddingLeft="80dp"
        android:layout_marginTop="10dp" />
</LinearLayout>