<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.datatech.halalhubstest.RestaurentViewActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/OrangeRed"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/linear_restaurent_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/relative_restaurent_info"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:background="@color/Orange"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ImageView
                    android:id="@+id/imageView_restaurent_pic"
                    android:layout_width="70dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    android:src="@drawable/icon_search" />

                <TextView
                    android:id="@+id/restaurent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="Papus Fish n Chips"
                    android:textColor="@color/list_restaurent_name_text" />

                <TextView
                    android:id="@+id/restaurent_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/restaurent_name"
                    android:layout_below="@+id/restaurent_name"
                    android:layout_marginTop="10dp"
                    android:text="Address"
                    android:textColor="@color/list_restaurent_name_text" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:background="@color/restaurent_view_open_close_bg" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/restaurent_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/restaurant_delivery_open"
                    android:textColor="@color/list_restaurent_name_text" />

                <TextView
                    android:id="@+id/restaurent_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/restaurent_open"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/restaurent_delivery_close"
                    android:textColor="@color/list_restaurent_review_text" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:background="@color/white" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <Button
                    android:id="@+id/button_show_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_show_menu"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:background="@color/restaurent_view_open_close_bg" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView_restaurent_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="130 reviews"
                    android:textColor="@color/list_restaurent_review_text" />

                <RatingBar
                    android:id="@+id/ratingBar_restaurent_view"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>